# rust-auxm-project

./: Cargo.toml
src/: main.rs
test_programs/: Cargo.toml
test_programs/src/: deref_trait.rs  main.rs
tests/: quick_dev.rs
