workspace = { members = ["test_programs"] }
[package]
name = "rust_auxm_porject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.7.4"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
# -- Others
lazy-regex = "3"
tokio = { version = "1.35.1", features = ["full"] }